# LynVault

./: Cargo.toml  LynVault.py  README.md
crates/vault-core/: Cargo.toml
crates/vault-core/src/: audit.rs  crypto.rs  error.rs  index.rs  lib.rs  lock.rs  office.rs  vault.rs  wipe.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
ui/: app.js  index.html  styles.css
