[package]
name = "lynvault-rs"
version = "2.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vault-core = { path = "../crates/vault-core" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]