[package]
name = "vault-core"
version = "2.1.1"
edition = "2021"

[dependencies]
hex = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
byteorder = "1"
log = "0.4"
calamine = "0.24"
quick-xml = "0.31"
zip = "0.6"